--- a/src/index.tpl.html
+++ b/src/index.tpl.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>App title here</title>
+        <title>React Google Adds Hack</title>
 
         <script src="http://code.jquery.com/jquery-2.1.4.min.js" crossorigin="anonymous"></script>
 
