--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 
         <!-- Latest compiled and minified JavaScript -->
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js" integrity="sha512-K1qjQ+NcF2TYO/eI3M6v8EiNYZfA95pQumfvcVrTHtwQVDG+aHRqLi/ETn2uB+1JqwYqVG3LIvdm9lj6imS/pQ==" crossorigin="anonymous"></script>
-    <link href="/app.min.css" rel="stylesheet"></head>
+    <link href="./app.min.css" rel="stylesheet"></head>
 
     <body>
         <div id="app"></div>
-    <script src="/vendor.js"></script><script src="/app.js"></script></body>
+    <script src="./vendor.js"></script><script src="./app.js"></script></body>
 </html>
